# shefa-react

./: .gitignore  01-setup.md  02-django-foundation.md  03-django-auth.md  04-django-charity-campaign.md  05-django-wallet-waqf.md  06-react-foundation.md  07-react-auth.md  08-react-charity-campaign.md  09-react-donation-wallet.md  10-react-waqf-dashboard.md  11-advanced-patterns.md  12-deployment.md  CLAUDE.md
backend/: CLAUDE.md  manage.py  pyproject.toml  pytest.ini
backend/apps/account/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/account/migrations/: 0001_initial.py  0002_alter_user_options_user_avatar_user_bio_and_more.py
backend/apps/campaign/: admin.py  apps.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/campaign/migrations/: 0001_initial.py
backend/apps/charity/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/charity/migrations/: 0001_initial.py
backend/apps/common/: exceptions.py  models.py  pagination.py  permissions.py
backend/apps/payment/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/payment/migrations/: 0001_initial.py
backend/apps/wallet/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/wallet/migrations/: 0001_initial.py
backend/apps/waqf/: apps.py  models.py  serializers.py  urls.py  views.py
backend/project/: asgi.py  celery.py  settings.py  urls.py
backend/project/settings/: base.py  development.py  production.py
backend/tests/: test_auth.py
(+51 files in other folders)
