[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.3",
    "dj-database-url>=3.1.2",
    "django==4.2.*",
    "django-cors-headers>=4.9.0",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "django-redis>=6.0.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "geopy>=2.4.1",
    "hijri-converter>=2.3.2.post1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
    "redis>=7.4.0",
    "tenacity>=9.1.4",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "factory-boy>=3.3.3",
    "flake8>=7.3.0",
    "freezegun>=1.5.5",
    "isort>=8.0.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "pytest-factoryboy>=2.8.1",
]
